--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-cypress/* linguist-language=Cypress
+C:\Users\Reden Longcop\Documents\CYPRESS\Gaming_Automation-Cypress\cypress/* linguist-language=Cypress
