--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-C:/Users/Reden Longcop/Documents/CYPRESS/Gaming_Automation-Cypress/cypress/* linguist-language=Cypress
+cypress/* linguist-language=Cypress
